gcc-14.2.0/gcc/testsuite/gdc.test/fail_compilation/fail21831.d
version https://git-lfs.github.com/spec/v1
oid sha256:494c05d613c1a7b22a1f9a9d35c9068e3b7190ee350eb6ecb12ce05006399714
size 714
